@@ -15,7 +15,7 @@ def test_legacy_certs(tmpdir, gcali_patches, patched_google_reauth):
     tmpdir = pathlib.Path(tmpdir)
     oauth_filepath = tmpdir / 'oauth'
     shutil.copy(TEST_DATA_DIR / 'legacy_oauth_creds.json', oauth_filepath)
-    gcal = gcali_patches.GCalI(config_folder=tmpdir, refresh_cache=False)
+    gcal = gcali_patches.GCalI(data_path=tmpdir, refresh_cache=False)
     assert isinstance(
         gcal.get_cal_service(), googleapiclient.discovery.Resource
     )
